# crab-bot

./: .gitignore  Cargo.toml  Dockerfile  Example.config.toml  README.md  build.rs  docker-compose.yaml  dockercompose.yml  roles.yaml
botapi/: Cargo.toml  Dockerfile
botapi/src/: main.rs
botdashboard/: Dockerfile  README.md  astro.config.mjs  env.d.ts  package-lock.json  package.json  tsconfig.json
botdashboard/better-auth_migrations/: init.sql
botdashboard/src/: middleware.ts
botdashboard/src/components/: OTP.tsx  login-form.tsx  mode-stub.astro  mode-toggle.tsx  navbar.astro  signup-form.tsx
botdashboard/src/layouts/: Layout.astro
botdashboard/src/lib/: auth-client.ts  auth.ts
botdashboard/src/pages/: dashboard.astro  index.astro  login.astro  signup.astro
discordbot/: Cargo.toml  Dockerfile  README.md
discordbot/src/: main.rs
src/: checks.rs  commands.rs  main.rs  roles.rs  storage.rs  utils.rs
src/checks/: admin_role.rs  check_user_exists.rs  check_user_not_exists.rs  enroll_channel.rs  remove_role.rs
src/commands/: acknowledgement.rs  admin_register_modal.rs  award.rs  check_user.rs  class_reaction_setup.rs  dump_channel.rs  edit_user.rs  enroll.rs  force_register.rs  help.rs  modal.rs  news.rs  ping.rs  register.rs  register_commands.rs  remove_points.rs  rss.rs  test_enum.rs
src/storage/: add_user_points.rs  database_storage.rs  edit_database.rs  get_user.rs  remove_user_points.rs  save_user.rs  user.rs  user_exists.rs
src/utils/: HandleVoiceStateUpdate.rs  college_autocomplete.rs  config.rs  event_handler.rs  handle_voice_state_update.rs  role_autocomplete.rs  roles.rs
