[package]
name = "crab_bot"
version = "2.0.0"
edition = "2021"
license = "GPL-3"
authors = ["Caden64", "Topazstix"]


[dependencies]
futures = "0.3.30"
poise = "0.6.1"
serde = "1.0.209"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
toml = "0.8.19"
log = "0.4.22"
serde_json = "1.0.127"
regex = "1.10.6"
chrono = "0.4.38"
chrono-tz = "0.9.0"
rss = "2.0.9"
reqwest = "0.12.7"
clokwerk = "0.4.0"

[build-dependencies]
poise = "0.6.1"
edres = { version = "0.6.0", features = ["yaml"] }
