[package]
name = "crab_bot"
version = "4.0.0"
edition = "2024"
license = "GPL-3"
authors = ["Caden64", "Topazstix"]

[dependencies]
poise = "0.6.1"
serde = { version = "1.0.216", features = ["derive"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
toml = "0.8.19"
serde_json = "1.0.134"
regex = "1.11.1"
rand = "0.8.5"
meta_fetcher = "0.1.1"
tracing = "0.1.41"
strum = { version = "0.27.2", features = ["derive"] }

[build-dependencies]
edres = "0.6.0"
serde = { version = "1.0.216", features = ["derive"] }
toml = "0.8.19"
strum = { version = "0.27.2", features = ["derive"] }
