[package]
name = "botapi"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
env_logger = "0.11.6"

lettre = { version = "0.11.12", features = ["async-std1-rustls-tls", "tokio1-rustls-tls", "builder", "smtp-transport", "async-std1"], default-features = false }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "rt"] }
